// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme=refresh-toolbar, Size=desktop contract with split panel (trigger is hidden) 1`] = `
Map {
  [Function] => {
    "appLayoutInternals": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": undefined,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": "__JSX__",
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": "__JSX__",
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel64",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
  },
  [Function] => {
    "appLayoutInternals": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": undefined,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": "__JSX__",
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": "__JSX__",
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel64",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "children": "__JSX__",
    "splitPanelInternals": {
      "bottomOffset": 0,
      "getMaxHeight": [Function],
      "headerHeight": 0,
      "isForcedPosition": false,
      "isOpen": false,
      "leftOffset": 0,
      "maxWidth": Infinity,
      "onPreferencesChange": [Function],
      "onResize": [Function],
      "onToggle": [Function],
      "position": "bottom",
      "refs": {
        "preferences": {
          "current": null,
        },
        "slider": {
          "current": null,
        },
        "toggle": {
          "current": null,
        },
      },
      "reportHeaderHeight": [Function],
      "reportSize": [Function],
      "rightOffset": 0,
      "setSplitPanelToggle": [Function],
      "size": 0,
      "topOffset": 0,
    },
  },
  [Function] => {
    "__internalRootRef": {
      "current": null,
    },
    "children": "__JSX__",
    "closeBehavior": "hide",
    "header": "Split panel header",
    "hidePreferencesButton": false,
    "i18nStrings": {
      "closeButtonAriaLabel": undefined,
      "openButtonAriaLabel": undefined,
      "preferencesCancel": undefined,
      "preferencesConfirm": undefined,
      "preferencesPositionBottom": undefined,
      "preferencesPositionDescription": undefined,
      "preferencesPositionLabel": undefined,
      "preferencesPositionSide": undefined,
      "preferencesTitle": undefined,
      "resizeHandleAriaLabel": undefined,
    },
  },
  [Function] => {
    "appLayoutInternals": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": undefined,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": "__JSX__",
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": "__JSX__",
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel64",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
  },
  [Function] => {
    "appLayoutInternals": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": undefined,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": "__JSX__",
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": "__JSX__",
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel64",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
  },
  [Function] => {
    "appLayoutInternals": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": undefined,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": "__JSX__",
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": "__JSX__",
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel64",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": false,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "toolbarProps": {
      "activeDrawerId": null,
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusRef": {
        "current": null,
      },
      "hasNavigation": true,
      "navigationFocusRef": "__JSX__",
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onNavigationToggle": [Function],
    },
  },
}
`;

exports[`Theme=refresh-toolbar, Size=desktop contract with split panel 1`] = `
Map {
  [Function] => {
    "appLayoutInternals": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": undefined,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": "__JSX__",
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel27",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": {
              "focus": [Function],
            },
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": true,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
  },
  [Function] => {
    "appLayoutInternals": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": undefined,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": "__JSX__",
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel27",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": {
              "focus": [Function],
            },
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": true,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "children": "__JSX__",
    "splitPanelInternals": {
      "bottomOffset": 0,
      "getMaxHeight": [Function],
      "headerHeight": 0,
      "isForcedPosition": false,
      "isOpen": false,
      "leftOffset": 0,
      "maxWidth": Infinity,
      "onPreferencesChange": [Function],
      "onResize": [Function],
      "onToggle": [Function],
      "position": "bottom",
      "refs": {
        "preferences": {
          "current": null,
        },
        "slider": {
          "current": null,
        },
        "toggle": {
          "current": {
            "focus": [Function],
          },
        },
      },
      "reportHeaderHeight": [Function],
      "reportSize": [Function],
      "rightOffset": 0,
      "setSplitPanelToggle": [Function],
      "size": 0,
      "topOffset": 0,
    },
  },
  [Function] => {
    "__internalRootRef": {
      "current": null,
    },
    "children": "__JSX__",
    "closeBehavior": "collapse",
    "header": "Split panel header",
    "hidePreferencesButton": false,
    "i18nStrings": {
      "closeButtonAriaLabel": undefined,
      "openButtonAriaLabel": undefined,
      "preferencesCancel": undefined,
      "preferencesConfirm": undefined,
      "preferencesPositionBottom": undefined,
      "preferencesPositionDescription": undefined,
      "preferencesPositionLabel": undefined,
      "preferencesPositionSide": undefined,
      "preferencesTitle": undefined,
      "resizeHandleAriaLabel": undefined,
    },
  },
  [Function] => {
    "appLayoutInternals": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": undefined,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": "__JSX__",
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel27",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": {
              "focus": [Function],
            },
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": true,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
  },
  [Function] => {
    "appLayoutInternals": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": undefined,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": "__JSX__",
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel27",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": {
              "focus": [Function],
            },
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": true,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
  },
  [Function] => {
    "appLayoutInternals": {
      "activeDrawer": undefined,
      "activeDrawerSize": 290,
      "activeGlobalDrawers": [],
      "activeGlobalDrawersIds": [],
      "activeGlobalDrawersSizes": {},
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": undefined,
      "discoveredBreadcrumbs": null,
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "drawersOpenQueue": [],
      "expandedDrawerId": undefined,
      "globalDrawers": [],
      "globalDrawersFocusControl": {
        "loseFocus": [Function],
        "refs": {},
        "setFocus": [Function],
      },
      "headerVariant": undefined,
      "isMobile": false,
      "maxDrawerSize": Infinity,
      "maxGlobalDrawersSizes": {},
      "minDrawerSize": 290,
      "minGlobalDrawersSizes": {},
      "navigation": "__JSX__",
      "navigationFocusControl": {
        "loseFocus": [Function],
        "refs": {
          "close": {
            "current": {
              "focus": [Function],
            },
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": null,
          },
        },
        "setFocus": [Function],
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onActiveDrawerResize": [Function],
      "onActiveGlobalDrawersChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "setExpandedDrawerId": [Function],
      "setNotificationsHeight": [Function],
      "setToolbarHeight": [Function],
      "setToolbarState": [Function],
      "splitPanelAnimationDisabled": true,
      "splitPanelControlId": "split-panel27",
      "splitPanelFocusControl": {
        "refs": {
          "preferences": {
            "current": null,
          },
          "slider": {
            "current": null,
          },
          "toggle": {
            "current": {
              "focus": [Function],
            },
          },
        },
        "setLastInteraction": [Function],
      },
      "splitPanelOpen": false,
      "splitPanelPosition": "bottom",
      "splitPanelToggleConfig": {
        "ariaLabel": undefined,
        "displayed": true,
      },
      "stickyNotifications": false,
      "toolbarState": "show",
      "verticalOffsets": {
        "drawers": 0,
        "header": 0,
        "notifications": 0,
        "toolbar": 0,
      },
    },
    "toolbarProps": {
      "activeDrawerId": null,
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": undefined,
            "drawerName": "",
            "triggerButton": undefined,
          },
          "content": undefined,
          "id": "awsui-internal-tools",
          "resizable": false,
          "trigger": {
            "iconName": "status-info",
          },
        },
      ],
      "drawersFocusRef": {
        "current": null,
      },
      "hasNavigation": true,
      "hasSplitPanel": true,
      "navigationFocusRef": {
        "current": null,
      },
      "navigationOpen": true,
      "onActiveDrawerChange": [Function],
      "onNavigationToggle": [Function],
      "onSplitPanelToggle": [Function],
      "splitPanelFocusRef": {
        "current": {
          "focus": [Function],
        },
      },
      "splitPanelToggleProps": {
        "active": false,
        "ariaLabel": undefined,
        "controlId": "split-panel27",
        "displayed": true,
        "position": "bottom",
      },
    },
  },
}
`;
